[package]
name = "llm-tasks"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Task persistence for LLM agent orchestration"
repository = "https://github.com/Osso/llm-tasks"

[[bin]]
name = "lt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
turso = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
dirs = "6"
anyhow = "1.0.102"

[dev-dependencies]
tempfile = "3.26.0"
